--- a/trab1/Makefile
+++ b/trab1/Makefile
@@ -1,47 +1,23 @@
 CC = gcc
-CFLAGS = -Wall -Wextra -std=c99 -g -Iinclude
-LDFLAGS = 
-SRC_DIR = src
-OBJ_DIR = obj
-BIN_DIR = .
+CFLAGS = -Wall -Wextra -std=c99 -g
+TARGET = agenda
+SOURCES = main.c util.c datetime.c appointment.c list.c sort.c parser.c buckets.c comparators.c writers.c resultado.c
+OBJECTS = $(SOURCES:.c=.o)
 
-SRCS = $(wildcard $(SRC_DIR)/*.c) \
-       $(wildcard $(SRC_DIR)/classes/*.c) \
-       $(wildcard $(SRC_DIR)/data/*.c) \
-       $(wildcard $(SRC_DIR)/lista/*.c) \
-       $(wildcard $(SRC_DIR)/io/*.c) \
-       $(wildcard $(SRC_DIR)/relatorios/*.c) \
-       $(wildcard $(SRC_DIR)/filtro/*.c)
-OBJS = $(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
-TARGET = $(BIN_DIR)/trabalho_poo
-all: $(TARGET)
+$(TARGET): $(OBJECTS)
+	$(CC) $(CFLAGS) -o $(TARGET) $(OBJECTS)
 
-$(TARGET): $(OBJS)
-	@mkdir -p $(BIN_DIR)
-	$(CC) $(OBJS) -o $@ $(LDFLAGS)
-	@echo "✅ Executável criado: $(TARGET)"
-
-$(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
-	@mkdir -p $(dir $@)
+%.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
+
 run: $(TARGET)
 	./$(TARGET)
 
 clean:
-	rm -rf $(OBJ_DIR) $(TARGET)
-	@echo "🧹 Arquivos de compilação removidos"
+	rm -f $(OBJECTS) $(TARGET)
 
-debug: CFLAGS += -DDEBUG -O0
-debug: $(TARGET)
+distclean: clean
+	rm -f relatconfirmados.txt relatadiados.txt relatcancelados.txt relatcompromissos.txt resultado.txt
+	rm -rf resultados
 
-release: CFLAGS += -O2
-release: $(TARGET)
-help:
-	@echo "Comandos disponíveis:"
-	@echo "  make all     - Compila o projeto"
-	@echo "  make run     - Compila e executa"
-	@echo "  make clean   - Remove arquivos compilados"
-	@echo "  make debug   - Compila com flags de debug"
-	@echo "  make release - Compila com otimização"
-
-.PHONY: all run clean debug release help
+.PHONY: clean distclean run
